--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <source src="store_image.mp4" type="video/mp4" />
         Please Check the video extensiondd.
     </video>
+    <video width="320" height="240" controls>
+        <source src="store_image.mp4" type="video/mp4" />
+        Please Check the video extensiondd.
+    </video>
 
     <iframe 
         width="560" 
